--- a/estilo/mobile.css
+++ b/estilo/mobile.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:481px) and (max-width:768px){
+@media screen and (max-width:768px){
         main {
             padding: 10px;
         }
