--- a/estilo/mobile.css
+++ b/estilo/mobile.css
@@ -1,4 +1,6 @@
-@media screen and (min-width:480px) and (max-width:768px){
+@charset "utf-8";
+
+@media screen and (max-width:768px){
         main {
             padding: 10px;
         }
